# AdventOfCode

./: CMakeLists.txt
cmake/: AddProject.cmake
day_1/: CMakeLists.txt
day_1/src/: main.cpp
day_2/: CMakeLists.txt
day_2/src/: main.cpp
